Fix dark mode note form styling

--- a/public/styles.css
+++ b/public/styles.css
@@ -71,7 +71,7 @@ body {
   width: min(90%, 480px);
   margin: 30px auto;
   padding: 15px 25px;
-  background: white;
+  background: #202124;
   border-radius: 15px;
   border: 2px solid #3c4043;
   box-shadow: 0 1px 5px rgb(138,137,137);
